--- a/src/views/pug/pages/index.pug
+++ b/src/views/pug/pages/index.pug
@@ -3,6 +3,6 @@ block variebals
     - metaTitle = 'AntoXa PRO - создание сайтов и web приложений';
     - metaDescription = 'Создание качественных сайтов и разработка web приложений любой сложности под ключ. Заказать создание сайта.';
     - metaKeywords = 'antoxa, pro, заказать, создание, сайтов, сайт, web, приложения, заказать сайт, создание сайтов, web приложение, под ключ';
-    - pageTitle = 'Создание web сайтов';
+    - pageTitle = 'Создание сайтов и web приложений';
 block content
     p Создание сайтов и разработка web приложений любой сложности под ключ.
